--- a/rdv-speakers/config.toml
+++ b/rdv-speakers/config.toml
@@ -28,8 +28,8 @@ googleAnalytics = "UA-XXXXXXXX-X"
     env="production"
 
 [params.currentEvent]
-    url="noel-2020/"
-    name="Le Noël des Speakers"    
+    url="chandeleur-2021/"
+    name="La Chandeleur des Speakers"    
     message="Our next event will be:"
 
 [params.logos]
@@ -69,8 +69,8 @@ googleAnalytics = "UA-XXXXXXXX-X"
     description = "*Les Rendez-vous des Speakers* est une série de conférences techniques, de rencontres, d'ateliers et autres événements pour les développeurs."
 
 [languages.fr.params.currentEvent] 
-    url="noel-2020/"
-    name="Le Noël des Speakers"  
+    url="chandeleur-2021/"
+    name="La Chandeleur des Speakers"  
     message="Notre prochain événement sera :"
 
 [languages.fr.params.partnerCategories]
