--- a/mardi-gras-2021/config.toml
+++ b/mardi-gras-2021/config.toml
@@ -52,7 +52,7 @@ googleAnalytics = "UA-XXXXXXXX-X"
 
 
 [params.days]
-    1 = "Tuesday, February 2nd"
+    1 = "Tuesday, February 16th"
 
 [languages]
 [languages.en]
@@ -78,7 +78,7 @@ googleAnalytics = "UA-XXXXXXXX-X"
   tag = "tags"
 
 [languages.fr.params.days]
-    1 = "Mardi, 2 Février"
+    1 = "Mardi, 16 Février"
 
 #...    
 
