--- a/rdv-speakers/config.toml
+++ b/rdv-speakers/config.toml
@@ -1,4 +1,5 @@
 baseURL = "https://rdv-speakers.fr/"
+defaultContentLanguage = "fr" 
 languageCode = "fr-fr"
 title = "Les Rendez-vous des Speakers"
 theme = "rdvspeakers-theme-hugo"
@@ -11,7 +12,7 @@ googleAnalytics = "UA-XXXXXXXX-X"
 
 [params]
     title = "Les Rendez-vous des Speakers"
-    description = "*Les Rendez-vous des Speakers* is a series of technical conferences, meetups, workshops and other event for developers, organized by the *Les Rendez-vous des Speakers* crew."
+    description = "*Les Rendez-vous des Speakers* est une série de conférences techniques, de rencontres, d'ateliers et autres événements pour les développeurs."
     images = ["images/social-share.jpg"]
     email = "rentreespeakers@gmail.com"
     keywords = "event, conference, speakers, programming, developers"
@@ -28,12 +29,13 @@ googleAnalytics = "UA-XXXXXXXX-X"
     env="production"
 
 [params.currentEvent]
-    url="mardi-gras-2021/"
-    name="Le Mardi-gras des Speakers"    
-    message="Our next event will be:"
+    url="les-briques-du-web/"
+    name="Les Briques du Web"  
+    message="On va bientôt démarrer une nouvelle emission"
+
 
 [params.logos]
-    jumbo = "images/logos/logo_mardi-gras-2021.png"
+    jumbo = "images/logos/logo_les-briques-du-web.png"
     header = "images/logos/logo_color_text.png"
     footer = "images/logos/logo_gray_text.png"
 
@@ -57,31 +59,8 @@ googleAnalytics = "UA-XXXXXXXX-X"
 
 
 [languages]
-[languages.en]
-    weight = 1
-    languageName = "gb"
-
 [languages.fr]
-    weight = 2
+    weight = 1
     languageName = "fr"
-
-[languages.fr.params]
-    description = "*Les Rendez-vous des Speakers* est une série de conférences techniques, de rencontres, d'ateliers et autres événements pour les développeurs."
-
-[languages.fr.params.currentEvent] 
-    url="mardi-gras-2021/"
-    name="Le Mardi-gras des Speakers"  
-    message="Notre prochain événement sera :"
-
-[languages.fr.params.partnerCategories]
-        platinium = "Sponsors"
-        gold = "Gold"
-        silver = "Silver"
-        startup = "Startup"
-        support = "Soutien"
-        communautes = "Community"
-
-[taxonomies]
-  tag = "tags"
 
 #...    
