--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "rdv-speakers/themes/rdvspeakers-theme-hugo"]
 	path = rdv-speakers/themes/rdvspeakers-theme-hugo
-	url = git@github.com:RdvSpeakers/rdvspeakers-theme-hugo.git
+	url = https://github.com/RdvSpeakers/rdvspeakers-theme-hugo.git
 [submodule "noel-2020/themes/rdvspeakers-theme-hugo"]
 	path = noel-2020/themes/rdvspeakers-theme-hugo
-	url = git@github.com:RdvSpeakers/rdvspeakers-theme-hugo.git
+	url = https://github.com/RdvSpeakers/rdvspeakers-theme-hugo.git
 [submodule "chandeleur-2021/themes/rdvspeakers-theme-hugo"]
 	path = chandeleur-2021/themes/rdvspeakers-theme-hugo
-	url = git@github.com:RdvSpeakers/rdvspeakers-theme-hugo.git
+	url = https://github.com/RdvSpeakers/rdvspeakers-theme-hugo.git
 [submodule "mardi-gras-2021/themes/rdvspeakers-theme-hugo"]
 	path = mardi-gras-2021/themes/rdvspeakers-theme-hugo
-	url = git@github.com:RdvSpeakers/rdvspeakers-theme-hugo.git
+	url = https://github.com/RdvSpeakers/rdvspeakers-theme-hugo.git
 [submodule "les-briques-du-web/themes/rdvspeakers-theme-hugo"]
 	path = les-briques-du-web/themes/rdvspeakers-theme-hugo
-	url = git@github.com:RdvSpeakers/rdvspeakers-theme-hugo.git
+	url = https://github.com/RdvSpeakers/rdvspeakers-theme-hugo.git
